tests/should_pass/lend_and_use.fit
resource Handle {
    conn: Socket,
    cleanup: close_handle,
}

fn borrow_read(h: Handle) -> String
fn borrow_write(h: Handle, data: String) -> ()

fn use_handle(h: Handle) -> () {
    borrow_write(h, borrow_read(h))
}
