tests/should_fail/select_missing_cap.fit
capability Fs
capability Read

fn read_file(path: String) using Read -> String

fn process(path: String) -> String {
    select Read from Fs
    read_file(path)
}
